created method put
